--- a/RiskSuite/Client/Shared/NavMenu.razor
+++ b/RiskSuite/Client/Shared/NavMenu.razor
@@ -21,7 +21,7 @@
         <div class="card card-body bg-dark p-0">
             <NavLink class="nav-link text-white" href="/reviewdata">Показатели</NavLink>
             <NavLink class="nav-link text-white" href="/reviewinput">Загрузка</NavLink>
-            <NavLink class="nav-link text-white" href="/reviewexport">Экспорт</NavLink>
+            <NavLink class="nav-link text-white" href="/dailyreviewreport">Экспорт</NavLink>
             <NavLink class="nav-link text-white" href="/dailyreview">Обзор</NavLink>
         </div>
     </div>
