--- a/RiskSuite/Client/Pages/DailyReview/GisCountryEdit.razor
+++ b/RiskSuite/Client/Pages/DailyReview/GisCountryEdit.razor
@@ -15,10 +15,7 @@
 		<InputCheckbox @bind-Value="GisCountryModel.IsHidden" class="form-control form-control-sm" style="height: 1.3rem;" />
 	</td>
 	<td class="p-0">
-		<InputCheckbox @bind-Value="GisCountryModel.IsCalculated" class="form-control form-control-sm" style="height: 1.3rem;" />
-	</td>
-	<td class="p-0">
-		<InputNumber @bind-Value="GisCountryModel.Multiplicator" class="form-control form-control-sm" />
+		<InputCheckbox @bind-Value="GisCountryModel.IsNotCalculated" class="form-control form-control-sm" style="height: 1.3rem;" />
 	</td>
 	<td class="align-middle py-0" style="width: 50px;">
 		<button class="far fa-save text-success p-0" style="background-color: transparent; border: 0;" type="submit" tooltip="save" />
