--- a/RiskSuite/Client/Pages/DailyReview/GisEdit.razor
+++ b/RiskSuite/Client/Pages/DailyReview/GisEdit.razor
@@ -17,10 +17,19 @@
 		<InputCheckbox @bind-Value="GisModel.IsUkraineTransport" class="form-control form-control-sm" style="height: 1.2rem;" />
 	</td>
 	<td class="p-0">
-		<InputCheckbox @bind-Value="GisModel.NoPhg" class="form-control form-control-sm" style="height: 1.2rem;" />
+		<InputCheckbox @bind-Value="GisModel.IsNotCalculated" class="form-control form-control-sm" style="height: 1.2rem;" />
 	</td>
 	<td class="p-0">
-		<InputCheckbox @bind-Value="GisModel.NoCountry" class="form-control form-control-sm" style="height: 1.2rem;" />
+		<InputCheckbox @bind-Value="GisModel.ShowOnTop" class="form-control form-control-sm" style="height: 1.2rem;" />
+	</td>
+	<td class="p-0">
+		<InputCheckbox @bind-Value="GisModel.ShowOnBottom" class="form-control form-control-sm" style="height: 1.2rem;" />
+	</td>
+	<td class="p-0">
+		<InputCheckbox @bind-Value="GisModel.IsOneRow" class="form-control form-control-sm" style="height: 1.2rem;" />
+	</td>
+	<td class="p-0">
+		<InputCheckbox @bind-Value="GisModel.NoPhg" class="form-control form-control-sm" style="height: 1.2rem;" />
 	</td>
 	<td class="align-middle py-0" style="width: 50px;">
 		<button class="far fa-save text-success py-0 px-1" style="background-color: transparent; border: 0;" type="submit" tooltip="save" />
