--- a/RiskSuite/Client/Pages/References/FileTypeSettingEdit.razor
+++ b/RiskSuite/Client/Pages/References/FileTypeSettingEdit.razor
@@ -6,6 +6,14 @@
 		<InputText @bind-Value="Model.Name" class="form-control form-control-sm" placeholder="наименование..." />
 		<ValidationMessage For="(()=>Model.Name)" />
 	</td>
+	<td class="p-0">
+		<InputSelect @bind-Value="Model.TypeName" class="form-control form-control-sm">
+			@foreach (var name in TypeList)
+			{
+				<option value="@name">@name</option>
+			}
+		</InputSelect>
+	</td>
 	<td class="align-middle py-0" style="width: 50px;">
 		<button class="far fa-save text-success p-0" style="background-color: transparent; border: 0;" type="submit" tooltip="save" />
 		<button class="fas fa-ban text-danger p-0" style="background-color: transparent; border: 0;" type="button" tooltip="cancel" @onclick="()=> Cancel()" />
