--- a/RiskSuite/Client/Pages/References/FileTypeSettingList.razor
+++ b/RiskSuite/Client/Pages/References/FileTypeSettingList.razor
@@ -43,6 +43,10 @@
                                                 Наименование
                                                 <i class="oi @(SetSortIcon("Name"))"></i>
                                             </th>
+                                            <th rowspan="2" class="sort-th" @onclick="@(() => OnSortChanged())">
+                                                Парсер
+                                                <i class="oi @(SetSortIcon("TypeName"))"></i>
+                                            </th>
                                             <th>
                                             </th>
                                         </tr>
@@ -65,6 +69,7 @@
                                                 <tr @onclick="()=> OnSelect(val)">
                                                     <td class="align-middle py-0">@val.Id</td>
                                                     <td class="align-middle py-0">@val.Name</td>
+                                                    <td class="align-middle py-0">@val.TypeName</td>
                                                     <td class="align-middle py-0" style="width: 50px;">
                                                         <button class="fas fa-edit text-primary p-0" style="background-color: transparent; border: 0;" type="button" tooltip="cancel" @onclick="()=> HandleUpdate(val)" />
                                                         <button class="far fa-trash-alt text-danger p-0" style="background-color: transparent; border: 0;" type="button" tooltip="cancel" @onclick="()=> HandleDelete(val.Id)" />
